some overflow fixes for magic items module

--- a/src/styles/spellbook.scss
+++ b/src/styles/spellbook.scss
@@ -23,3 +23,7 @@
 
   justify-content: flex-end;
 }
+
+.magic-items-spells-content:not(:first-child) {
+  margin-top: 1em;
+}
