--- a/src/styles/tab-area.scss
+++ b/src/styles/tab-area.scss
@@ -116,6 +116,7 @@
     border-bottom: $groove-border;
 
     .item-name {
+      @include truncate;
       cursor: unset;
     }
   }
